# src/routes/v1.ts
@@ -4,6 +4,7 @@ import userController from "../controllers/user.controller";
 import { authentication } from "../middlewares/authentication";
 import { authorize } from "../middlewares/authorization";
 import threadController from "../controllers/thread.controller";
+import { upload } from "../middlewares/upload-file";
 
 export const routerV1 = express.Router();
 
@@ -14,11 +15,16 @@ routerV1.post("/users", userController.create);
 routerV1.patch("/users", userController.update);
 routerV1.delete("/users/:id", userController.delete);
 
-routerV1.get("/threads", threadController.find);
-routerV1.get("/threads/:id", threadController.findById);
-routerV1.post("/threads", threadController.create);
-routerV1.patch("/threads/:id", threadController.update);
-routerV1.delete("/threads/:id", threadController.delete);
+routerV1.get("/threads", authentication, threadController.find);
+routerV1.get("/threads/:id", authentication, threadController.findById);
+routerV1.post(
+  "/threads",
+  authentication,
+  upload.single("image"),
+  threadController.create
+);
+routerV1.patch("/threads/:id", authentication, threadController.update);
+routerV1.delete("/threads/:id", authentication, threadController.delete);
 
 routerV1.post("/auth/login", authController.login);
 routerV1.post("/auth/register", authController.register);
